[project]
name = "jax-xva"
version = "0.1.0"
description = "A high-performance XVA library using JAX"
authors = [
    {name = "Ebrahim Pichka",email = "ebrahim.pichka@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jax (>=0.5.3,<0.6.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "jax_xva", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
